Updated todo and plan